# KP6-Django

./: pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/management/commands/: work_with_db.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  blogpost_main_page.html
blog/templates/blog/includes/: inc_menu.html
blog/templates/blogs/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  blogpost_main_page.html
blog/templates/blogs/includes/: inc_menu.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  task.py  urls.py  views.py
mailing/management/commands/: run.py  send_email.py  work_with_db.py
mailing/templates/catalog/: contacts.html  goods.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
mailing/templates/catalog/includes/: inc_menu.html
mailing/templates/mailing/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  main.html  message_confirm_delete.html  message_detail.html  message_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/templates/: login.html
users/templates/users/: reset_password.html  user_form.html
